@@ -12,9 +12,8 @@ import java.util.stream.Stream;
 import static java.util.Collections.emptyList;
 import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.additionalData;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.BO_REGISTRAR_ESCALATION;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.REGISTRAR_ESCALATION_REASON_REFERRALS;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_REGISTRAR_ESCALATION_EVENT;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_REGISTRAR_ESCALATION_ORDERS;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_REGISTRAR_ESCALATION_ORDERS_TASK_TYPE_NAME;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_REGISTRAR_ESCALATION_REFERRALS;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_REGISTRAR_ESCALATION_REFERRALS_TASK_TYPE_NAME;
 
@@ -30,36 +29,27 @@ public class CamundaTaskWaInitiationResolveRegistrarEscalationReferralsTestProvi
                 "processCategories", "case progression"
         );
 
-        Map<String, Object> ordersTask = Map.of(
-                "taskId", RESOLVE_REGISTRAR_ESCALATION_ORDERS,
-                "name", RESOLVE_REGISTRAR_ESCALATION_ORDERS_TASK_TYPE_NAME,
-                "processCategories", "case progression"
-        );
-
         return Stream.of(
                 Arguments.of(
                         RESOLVE_REGISTRAR_ESCALATION_EVENT,
                         BO_REGISTRAR_ESCALATION,
-                        additionalData(false, "", false, Collections.emptyList(), false),
-                        List.of(referralsTask, ordersTask)
+                        additionalData(false, "", false, Collections.emptyList(), false,
+                                REGISTRAR_ESCALATION_REASON_REFERRALS),
+                        List.of(referralsTask)
                 ),
                 Arguments.of(
                         RESOLVE_REGISTRAR_ESCALATION_EVENT,
                         BO_REGISTRAR_ESCALATION,
-                        additionalData(true, "", false, Collections.emptyList(), false),
+                        additionalData(true, "", false, Collections.emptyList(), false,
+                                REGISTRAR_ESCALATION_REASON_REFERRALS),
                         emptyList()
-                ),
-                Arguments.of(
-                        RESOLVE_REGISTRAR_ESCALATION_EVENT,
-                        BO_REGISTRAR_ESCALATION,
-                        null,
-                        List.of(referralsTask, ordersTask)
                 ),
                 Arguments.of(
                         "someOtherEvent",
                         BO_REGISTRAR_ESCALATION,
-                        additionalData(false, "", true, Collections.emptyList(), false),
-                        Collections.emptyList()
+                        additionalData(false, "", false, Collections.emptyList(), false,
+                                REGISTRAR_ESCALATION_REASON_REFERRALS),
+                        emptyList()
                 )
         );
 
